# services/pokedex/api/oas_validators_gen.go
@@ -259,6 +259,29 @@ func (s *JoinBattle) Validate() error {
 	return nil
 }
 
+func (s *MoveList) Validate() error {
+	if s == nil {
+		return validate.ErrNilPointer
+	}
+
+	var failures []validate.FieldError
+	if err := func() error {
+		if s.Moves == nil {
+			return errors.New("nil is invalid value")
+		}
+		return nil
+	}(); err != nil {
+		failures = append(failures, validate.FieldError{
+			Name:  "moves",
+			Error: err,
+		})
+	}
+	if len(failures) > 0 {
+		return &validate.Error{Fields: failures}
+	}
+	return nil
+}
+
 func (s *Pokemon) Validate() error {
 	if s == nil {
 		return validate.ErrNilPointer
